
    HIVE-1536. Add support for JDBC PreparedStatements
    (Sean Flatley via jvs)

    HIVE-1580. Cleanup ExecDriver.progress
    (Joydeep Sen Sarma via namit)

    HIVE-1614. UDTF json_tuple should return null row when input is not a valid
    JSON string (Ning Zhang via namit)

    HIVE-1645. ability to specify parent directory for zookeeper lock manager
    (namit via He Yongqiang)

    HIVE-1226. support filter pushdown against non-native tables
    (jvs via He Yongqiang)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1524. Parallel Execution fails if mapred.job.name is set
    (Ning Zhang via jssarma)

    HIVE-1509. Hive should kill query if too many files are created by it
    (Ning Zhang via jssarma)

    HIVE-1471. CTAS should unescape column names in select-clause
    (Ning Zhang via jssarma)

    HIVE-1440. Bug in RCFiles with local work (map-join or sort-merge join)
    (He Yongqiang via namit)

    HIVE-1454. insert overwrite and CTAS fail in hive local mode
    (Joydeep Sen Sarma via He Yongqiang )

    HIVE-1305. add progress in join and groupby
    (Siying Dong via He Yongqiang)

    HIVE-1453. Make Eclipse launch tempaltes auto-adjust to Hive
    version number changes.
    (Arvind Prabhakar via jvs)

    HIVE-1056. Predicate push down does not work with UDTF's
    (Paul Yang via He Yongqiang)

    HIVE-1385. UDF field() doesn't work
    (Siying Dong via He Yongqiang)

    HIVE-1455. lateral view does not work with column pruning
    (Paul Yang via He Yongqiang)

    HIVE-1470. percentile_approx() fails with more than 1 reducer
    (Mayank Lahiri via jvs)

    HIVE-1425. hive.task.progress should be added to conf/hive-default.xml
    (John Sichi via Ning Zhang)

    HIVE-1492. FileSinkOperator should remove duplicated files from the same task based on file sizes
    (Ning Zhang via He Yongqiang)

    HIVE-1491. fix or disable loadpart_err.q
    (John Sichi via He Yongqiang)

    HIVE-1411. DataNucleus throws NucleusException if core-3.1.1 JAR